--- a/asyncapi.yml
+++ b/asyncapi.yml
@@ -1,4 +1,4 @@
-asyncapi: 2.3.0
+asyncapi: 2.2.0
 info:
   title: Trivia Del Genio AsyncAPI
   version: 1.0.0
@@ -37,14 +37,16 @@ components:
     #trivia
     startTriviaDto:
       payload:
-        user:
-          type:
-            object:
-              properties:
-                id:
-                  type: string
-                Authorization:
-                  type: string
+        type: object
+        properties:
+          user:
+            type: object
+            description: Start trivia
+            properties:
+              id:
+                type: string
+              Authorization:
+                type: string
     triviaUserJoinedDto:
       payload:
         type: object
